# naive-bayes

./: naive-bayes.cabal
src/Data/: Classifier.hs
src/Data/Classifier/: NaiveBayes.hs
test/Data/: ClassifierSpec.hs
test/Data/Classifier/: NaiveBayesSpec.hs
