name:                naive-bayes
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Fraser Murray
maintainer:          fraser.m.murray@gmail.com
-- copyright:
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:
    Data.Classifier
    Data.Classifier.NaiveBayes
  build-depends:
    base >=4.7 && <4.8,
    containers,
    data-counter,
    data-default
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:
    ViewPatterns
  ghc-options: -Wall
